# thurbox

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  build.rs  cog.toml  deny.toml  pup.ron  renovate.json  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  CONSTITUTION.md  FEATURES.md  MCP_ROLES.md  README.md
scripts/: install-dev-tools.sh  install.bats  install.sh  test-helpers.bash
src/: lib.rs  main.rs  paths.rs
src/app/: key_handlers.rs  mcp_editor_modal.rs  mod.rs  modals.rs  state.rs
src/claude/: backend.rs  input.rs  mod.rs  pty_session.rs  tmux.rs
src/git/: mod.rs
src/mcp/: mod.rs  tools.rs  types.rs
src/project/: mod.rs
src/session/: mod.rs
src/storage/: audit.rs  mcp_servers.rs  mod.rs  projects.rs  roles.rs  schema.rs  sessions.rs  sync.rs  worktrees.rs
src/sync/: delta.rs  file_store.rs  mod.rs  state.rs
src/ui/: add_project_modal.rs  branch_selector_modal.rs  delete_project_modal.rs  edit_project_modal.rs  info_panel.rs  layout.rs  links.rs  mcp_editor_modal.rs  mod.rs  project_list.rs  repo_selector_modal.rs  restore_sessions_modal.rs  role_editor_modal.rs  role_selector_modal.rs  session_list.rs  session_mode_modal.rs  status_bar.rs  terminal_view.rs  theme.rs  worktree_name_modal.rs
tests/: architecture_rules.rs  mcp_http_integration.rs  sync_integration.rs  version_format.rs
