[package]
name = "thurbox"
version = "0.1.0"
edition = "2021"
authors = ["LeTuR <magicletur@protonmail.com>"]
license = "MIT"
description = "A TUI for orchestrating multiple Claude Code instances with repository management"
repository = "https://github.com/Thurbeen/thurbox"
keywords = ["tui", "claude", "git", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"
tui-term = "0.3"

# Terminal emulation
vt100 = "0.16"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }

# Session management
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"

# Development tool requirements (install with `cargo binstall` or `cargo install`)
[package.metadata.dev-tools]
prek = "0.2.0"
cocogitto = "6.2.0"
cargo-nextest = "0.9.0"
cargo-deny = "0.16.0"
cargo-audit = "0.21.0"
rumdl = "0.1.19"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
